--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>firstcode 3</title>
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatum dicta cum, voluptas a quas eum sint veniam in. Reiciendis dolorem sed, magnam odit aliquid accusantium maxime maiores atque perspiciatis.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatum dicta cum, voluptas a quas eum sint veniam in. Reiciendis dolorem sed, magnam odit aliquid accusantium maxime maiores atque perspiciatis.</p> 
+    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro animi voluptatem dolore repudiandae sunt totam illo nam reprehenderit nemo ipsam!</p>
 </body>
 </html>
