--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>firstcode 3</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatum dicta cum, voluptas a quas eum sint veniam in. Reiciendis dolorem sed, magnam odit aliquid accusantium maxime maiores atque perspiciatis.</p> 
