--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatum dicta cum, voluptas a quas eum sint veniam in. Reiciendis dolorem sed, magnam odit aliquid accusantium maxime maiores atque perspiciatis.</p> 
     
     <p>Loem, ipsum dolor sit amet consectetur adipisicing elit. Porro animi voluptatem dolore repudiandae sunt totam illo nam reprehenderit nemo ipsam!</p>
-    <p>div</p>
+    <p>lorem1</p>
 </body>   
 </html>
